<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="hello">Hello World, LastFMPlayer</string>
    <string name="app_name">aLastFM Player</string>
<string name="local_service_connected">Service connected</string>
<string name="local_service_disconnected">Local service disconnected</string>
<string name="alert_dialog_single_choice">Error</string>
<string name="alert_dialog_ok">OK</string>
<string name="alert_dialog_cancel">Cancel</string>
<string name="user_info_title">User Info</string>
<string name="ok_button">OK</string>
<string name="cancel_button">Cancel</string>
<string name="settings_button">Settings</string>
<string name="menu_settings">Settings</string>
<string name="share_track_title">Share Track</string>
<string name="menu_about">About</string>
<string name="about_title">About</string>
<string name="station_spinner_prompt">Select station type</string>

<string name="username">Username</string>
<string name="password">Password</string>
<string name="signup">Don\&apos;t have a last.fm username? Register at http://last.fm/join</string>
<string name="track_loved">Track loved</string>
<string name="track_banned">Track banned</string>
<string name="track_shared">Track shared</string>
<string name="message">Message</string>
<string name="with">with</string>
<string name="tune">Tune to a station</string>
<string name="enter_station_title">Enter station name</string>
<string name="enter_artist_name_title">Enter station name</string>
<string name="enter_tag_title">Enter tag</string>
<string name="choose_friend_title">Enter tag</string>
<string name="mute_on_call">Mute sound on call</string>
<string name="userinfo_button">Change user name &amp; password</string>
<string name="reset_button">Reset all settings</string>
<string name="settings_title">Settings</string>
</resources>
