<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    >

    <TextView android:id="@+id/share_track_title"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text=""
        android:textSize="18sp"
    />

    <TextView android:id="@+id/share_track_author"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text=""
        android:singleLine="true"
    />

    <TextView
        android:layout_width="fill_parent" android:layout_height="wrap_content"
        android:layout_weight="0"
        android:paddingBottom="4dip"
        android:paddingTop="15dip"
        android:text="@string/with"/>    
<AutoCompleteTextView android:id="@+id/share_track_recipient" 
    android:layout_height="wrap_content" 
    android:text=""
    android:layout_width="fill_parent"/>

    <TextView
        android:layout_width="fill_parent" android:layout_height="wrap_content"
        android:layout_weight="0"
        android:paddingBottom="4dip"
        android:text="@string/message"/>    

    <EditText android:id="@+id/share_track_message"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"        
        android:clickable="true"
        android:singleLine="false"
		android:capitalize="sentences"
		android:autoText="true"        
		android:gravity="top"       
    />
      
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="right" >

        <Button android:id="@+id/cancel_button"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
        	android:layout_weight="1"            
            android:text="@string/cancel_button"/>

        <Button android:id="@+id/ok_button"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
        	android:layout_weight="1"            
            android:layout_marginLeft="10dip"
            android:text="@string/ok_button" />
    </LinearLayout>
    
</LinearLayout>
